Adding mongodb role to db machine in playbook

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -29,7 +29,7 @@
   mongodb_user:
     database: admin
     name: root
-    password: {{ dbpass }}
+    password: "{{ dbpass }}"
     roles: root
     state: present
 - name: Enable Authentication
@@ -37,5 +37,5 @@
     path: /etc/mongodb.conf
     regexp: '^#?auth \= true'
     line: 'auth = true'
-  nofity:
-  - restart mongodb
+  notify:
+    - restart mongodb
