--- a/mean.yml
+++ b/mean.yml
@@ -1,5 +1,9 @@
 ---
-- hosts: db
+# - hosts: db
+#   become: yes
+#   roles:
+#     - mongodb
+- hosts: app
   become: yes
   roles:
-    - mongodb
+    - node
